--- a/App20.Focus/App20.Focus.csproj
+++ b/App20.Focus/App20.Focus.csproj
@@ -8,12 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Mar.Controls" Version="0.3.3"/>
+        <PackageReference Include="Mar.Console" Version="0.6.0"/>
+        <PackageReference Include="Mar.Controls" Version="0.3.7"/>
         <PackageReference Include="Serilog" Version="3.0.1"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
         <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0"/>
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
-        <PackageReference Include="System.Management" Version="7.0.2"/>
     </ItemGroup>
 
     <ItemGroup>
