--- a/App19.SciChart/App19.SciChart.csproj
+++ b/App19.SciChart/App19.SciChart.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
         <ApplicationIcon>Resources\main.ico</ApplicationIcon>
-        <RootNamespace>App19.SciChart00</RootNamespace>
+        <RootNamespace>App19</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
