--- a/App20.Focus/App20.Focus.csproj
+++ b/App20.Focus/App20.Focus.csproj
@@ -17,7 +17,10 @@
 
     <ItemGroup>
         <None Remove="Resource\ImgPeperPlane.png"/>
-        <Resource Include="Resource\ImgPeperPlane.png"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Resource Include="Resources\ImgPaperPlane.png"/>
     </ItemGroup>
 
 </Project>
