--- a/App18.Material/App18.Material.csproj
+++ b/App18.Material/App18.Material.csproj
@@ -9,10 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
         <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1" />
-        <PackageReference Include="Mar.Console" Version="0.6.1"/>
-        <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+        <PackageReference Include="Mar.Console" Version="0.6.3"/>
+        <PackageReference Include="MaterialDesignColors" Version="3.0.0"/>
+        <PackageReference Include="MaterialDesignThemes" Version="5.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
