--- a/App19.SciChart/App19.SciChart.csproj
+++ b/App19.SciChart/App19.SciChart.csproj
@@ -11,8 +11,9 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
-        <PackageReference Include="Mar.Console" Version="0.6.1"/>
-        <PackageReference Include="MaterialDesignThemes" Version="4.9.0"/>
+        <PackageReference Include="Mar.Console" Version="0.6.3"/>
+        <PackageReference Include="MaterialDesignColors" Version="3.0.0"/>
+        <PackageReference Include="MaterialDesignThemes" Version="5.0.0"/>
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77"/>
         <PackageReference Include="NAudio" Version="2.2.1"/>
         <PackageReference Include="SciChart" Version="6.6.0.26505"/>
