--- a/App01.VLC/App01.VLC.csproj
+++ b/App01.VLC/App01.VLC.csproj
@@ -2,19 +2,26 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0-windows</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
         <LangVersion>12</LangVersion>
+        <ApplicationIcon>Resources\main.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
         <PackageReference Include="LibVLCSharp" Version="3.8.4"/>
         <PackageReference Include="LibVLCSharp.WPF" Version="3.8.4"/>
+        <PackageReference Include="Mar.Console" Version="0.6.7"/>
         <PackageReference Include="MaterialDesignColors" Version="3.0.0"/>
         <PackageReference Include="MaterialDesignThemes" Version="5.0.0"/>
         <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.20"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Remove="Resources\main.ico"/>
+        <Resource Include="Resources\main.ico"/>
     </ItemGroup>
 
 </Project>
