--- a/App18.Material/App18.Material.csproj
+++ b/App18.Material/App18.Material.csproj
@@ -2,10 +2,11 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net7.0-windows</TargetFramework>
-        <Nullable>enable</Nullable>
+        <TargetFramework>net8.0-windows</TargetFramework>
+        <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
         <ApplicationIcon>Resources\ic_main.ico</ApplicationIcon>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
