--- a/App21.Skeleton/App21.Skeleton.csproj
+++ b/App21.Skeleton/App21.Skeleton.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
         <PackageReference Include="Mar.Console" Version="0.6.8"/>
+        <PackageReference Include="MaterialDesignColors" Version="3.1.0"/>
         <PackageReference Include="MaterialDesignThemes" Version="5.1.0"/>
     </ItemGroup>
 
