--- a/App24.LicenseInput/App24.LicenseInput.csproj
+++ b/App24.LicenseInput/App24.LicenseInput.csproj
@@ -10,11 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Page Update="Views\MainWindow.xaml">
-            <Generator>MSBuild:Compile</Generator>
-            <XamlRuntime>Wpf</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
+        <PackageReference Include="MaterialDesignThemes" Version="5.1.0"/>
     </ItemGroup>
 
 </Project>
